package bigtalkdesignMod.v18.v18_3;

public class Memento {
    private String state;

	public Memento(String state) {
		this.state = state;
	}

	public String getState() {
		return state;
	}

	public void setState(String state) {
		this.state = state;
	}

    

}
